lintian (2.5.13) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - conffile-is-not-in-package
      - debconf-translation-using-general-list
    + Removed:
      - debhelper-maintscript-needs-versioned-build-depends
      - debhelper-script-needs-versioned-build-depends

  * checks/*:
    + [NT] Use Lintian::Path objects as arguments to unpacked
      and control where these objects are available.
  * checks/binaries:
    + [RA] Do not complain about kernel modules with no shared
      library dependency information.  Patch from Guillem Jover.
      (Closes: #706242)
  * checks/changes:
    + [NT] Recognise "<dist>-backports-sloppy" as a valid
      distribution.  Thanks to Romain Francoise for the
      report and the patch.  (Closes: #705170)
  * checks/conffiles:
    + [NT] Strip whitespace from conffiles similar to how dpkg
      does it.
    + [NT] When emitting duplicate-conffile, avoid repeating
      other tags related to that conffile.  The exception to
      this is relative-conffile where the original file might
      not have triggered that tag.
    + [NT] Test that all paths listed in the "conffiles" control
      file is actually in the package being tested.
  * checks/cruft{,.desc}:
    + [JW] Correct the name of the architecture listed in
      description of the tag outdated-autotools-helper-file.
      (Closes: #706166)
    + [NT] Flag all absolute symlinks in source packages as
      "unsafe".  (Closes: #697164)
    + [NT] Fix false-positive source-contains-unsafe-symlink
      for symlinks ascending one or more levels without escaping
      the package root.  Thanks to Michael Schutte for the
      report and the patch.  (Closes: #707742)
    + [NT] Add a series of patches from Bastien Roucariès to
      reduce the number of false positives in the GDFL related
      checks.  (Closes: #708957, #708881)
  * checks/debhelper{,.desc}:
    + [NT] Retire some tags that is no longer relevant in the