@@ -1248,15 +1248,6 @@ Info: The package appears to ship a gzip compressed objects.inv file
  option to dh_compress. Newer versions of debhelper handle this
  correctly by default.
 
-Tag: missing-pre-dependency-on-multiarch-support
-Severity: serious
-Certainty: certain
-Info: The package ships a library in one of the multiarch lib directories,
- /lib/&lt;triplet&gt; and /usr/lib/&lt;triplet&gt;, but does not declare a
- pre-dependency on multiarch-support.  Packages installing to these
- paths must Pre-Depends: multiarch-support to ensure the library can be
- found by the dynamic linker at every point during an upgrade.
-
 Tag: package-contains-no-arch-dependent-files
 Severity: minor
 Certainty: possible
