@@ -24,19 +24,18 @@ Enable-Tags: FSSTND-dir-in-usr, FSSTND-dir-in-var, arch-dependent-file-in-usr-sh
  maintainer-address-missing, maintainer-name-missing,
  maintainer-script-removes-device-files, malformed-deb-archive, md5sum-mismatch,
  missing-build-dependency, missing-dependency-on-libc,
- missing-dependency-on-perlapi, missing-pre-dependency-on-multiarch-support,
- mknod-in-maintainer-script, no-architecture-field, no-copyright-file,
- no-maintainer-field, no-package-name, no-shlibs-control-file, no-version-field,
- non-etc-file-marked-as-conffile, not-allowed-control-file,
- package-contains-ancient-file, package-contains-info-dir-file,
- package-has-no-description, package-installs-python-bytecode,
- package-not-lowercase, package-uses-local-diversion,
- preinst-interpreter-without-predepends, section-is-dh_make-template,
- source-contains-waf-binary, source-field-does-not-match-pkg-name,
- statically-linked-binary, symlink-has-too-many-up-segments,
- too-many-architectures, uploader-address-is-on-localhost,
- uploader-address-malformed, uploader-name-missing,
- usr-share-doc-symlink-to-foreign-package,
+ missing-dependency-on-perlapi, mknod-in-maintainer-script,
+ no-architecture-field, no-copyright-file, no-maintainer-field, no-package-name,
+ no-shlibs-control-file, no-version-field, non-etc-file-marked-as-conffile,
+ not-allowed-control-file, package-contains-ancient-file,
+ package-contains-info-dir-file, package-has-no-description,
+ package-installs-python-bytecode, package-not-lowercase,
+ package-uses-local-diversion, preinst-interpreter-without-predepends,
+ section-is-dh_make-template, source-contains-waf-binary,
+ source-field-does-not-match-pkg-name, statically-linked-binary,
+ symlink-has-too-many-up-segments, too-many-architectures,
+ uploader-address-is-on-localhost, uploader-address-malformed,
+ uploader-name-missing, usr-share-doc-symlink-to-foreign-package,
  usr-share-doc-symlink-without-dependency, wrong-file-owner-uid-or-gid
 
 Tags: FSSTND-dir-in-usr, FSSTND-dir-in-var, bad-package-name, bad-relation, bad-version-number,
