@@ -1,2 +1,0 @@
-libbasic.so.2 libbasic2 #MINVER#
- lib_interface@Base 1.0
