@@ -1,1 +1,0 @@
-E: libbasic2: missing-pre-dependency-on-multiarch-support
