@@ -1,16 +1,0 @@
-Source: {$srcpkg}
-Priority: extra
-Section: libs
-Maintainer: {$author}
-Standards-Version: {$standards_version}
-Build-Depends: debhelper (>= 9)
-
-Package: libbasic2
-Architecture: any
-Depends: $\{misc:Depends\}, $\{shlibs:Depends\}
-Description: {$description}
- This is a test package designed to exercise some feature or tag of
- Lintian.  It is part of the Lintian test suite and may do very odd
- things.  It should not be installed like a regular package.  It may
- be an empty package.
-
